# Rhenium

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  VERSION  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py
backend/api/: __init__.py  app.py  main.py  routes.py
backend/api/middleware/: __init__.py  error_handler.py  logging.py
backend/api/routers/: __init__.py  admin.py  auth.py  health.py  query.py  schema.py
backend/api/schemas/: __init__.py  admin.py  auth.py  common.py  query.py  schema.py
backend/auth/: __init__.py  dependencies.py  models.py  rbac.py  service.py
backend/config/: __init__.py  settings.py
backend/database/: __init__.py  connection.py  executor.py  models.py  repository.py  schema.py
backend/database/migrations/: env.py
backend/db/: __init__.py  connection.py  executor.py  schema.py
backend/llm/: __init__.py  cache.py  client.py  prompts.py  token_tracking.py
backend/llm/prompts/: registry.py
backend/observability/: __init__.py  logging_config.py  metrics.py  tracing.py
backend/safety/: __init__.py  access_control.py  explainer.py  policies.py  validator.py
backend/semantic/: __init__.py  chroma_store.py  embeddings.py  interface.py
backend/tests/: __init__.py  test_api.py  test_safety.py
data/: README.md
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: api_examples.md  api_reference.md  architecture.md  deployment_guide.md  developer_guide.md  experiments_results.md  project_plan.md  research_background.md  research_paper_draft.md
experiments/: README.md  __init__.py  benchmark.py  comparison_data.py  config.py  evaluate_text_to_sql.py  finetune_gemma.py  finetune_llama.py  finetune_openai.py  run_comparison.py  visualize_results.py
experiments/configs/: anthropic_claude.yaml  benchmark_v1.yaml  gpt4_baseline.yaml  mock_provider_test.yaml
experiments/datasets/: .gitkeep  sales_queries.json  sales_queries_large.json  spider_sample.json
frontend/: app.py
k8s/: configmap.yaml  deployment.yaml  service.yaml
scripts/: README.md  cost_estimator.py  create_large_db.py  create_sample_db.py  init_db.py  run_dev_server.py  verify_system.py
terraform/: main.tf
tests/: test_api.py  test_integration.py  test_security.py  test_sql_generation.py
